# ImGuiAppTemplate

./: .gitignore  .gitmodules  App.cmake  CMakeLists.txt  CMakeSettings.json  README.md
targets/app/: app.cpp  app.h  main.cpp  target.cmake  with_gui.h
